--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,9 +1,10 @@
 h1 {
-    background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/pattern.jpeg);
-    text-align: center;
-    font-size: 100px;
-     color: Khaki;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/pattern.jpeg);
+  text-align: center;
+  font-size: 100px;
+   color: Khaki;
 }
+<!-- common fonts for h1, h2,h3 -->
 h1, h2, h3 {
   font-weight: bold;
 }
@@ -17,13 +18,14 @@ h1, h2, h3 {
   background-color: SkyBlue;
 }
 .item h2 {
-    color: white;
-    font-size: 32px;
+  color: white;
+  font-size: 32px;
 }
 .price {
-    color: Blue;
-    font-weight: bold;
+  color: Blue;
+  font-weight: bold;
 }
+<!-- common fonts for h1, h2,h3, p -->
 h1, h2, h3, p {
-    font-family: Helvetica;
+  font-family: Helvetica;
 }
